# bible-app

./: .env.example  .gitignore  DEPLOYMENT_FIX.md  Dockerfile  Makefile  README-DEPLOYMENT.md  README.md  S3_SETUP.md  bible_chat.py  demo_performance.py  deploy.sh  docker-compose.yml  mcheyne_structured_2025_10_18.json  plan_migration.md  pyproject.toml  requirements.txt  simple-fix.sh
.github/workflows/: deploy.yml
.kiro/specs/bible-data-models/: design.md  requirements.md  tasks.md
.streamlit/: config.toml
aws/: DEPLOYMENT.md  infrastructure.tf  lambda_function.py  package_lambda.sh  task-definition.json  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars.example
bible_db/: chroma.sqlite3
src/: README.md  __init__.py  bible_chat.py  bible_format.py  bible_models.py  bible_parser.py  bible_speak.py  demo_serialization.py  mccheyne.py  s3_bible_cache.py
src/pages/: About.py  about_.py
tests/: README.md  __init__.py  bible_parser_integration_example.py  test_bible_parser.py  test_bible_serialization.py  test_bible_verse.py  test_bible_verse_simple.py  test_display_formatting.py  test_highlight_management.py  test_integration_example.py  test_mccheyne_display.py  test_mcheyne_integration.py  test_performance.py  test_typography.py
