[project]
name = "bible-chat"
version = "0.1.0"
description = "A simple Bible-focused chat application using OpenAI's LLM with built-in NKJV knowledge"
authors = [
    {name = "Bible Chat", email = "user@example.com"}
]
dependencies = [
    "streamlit>=1.29.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "curl-cffi>=0.5.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
bible-chat = "bible_chat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []