[project]
name = "bible-chat"
version = "0.1.0"
description = "A simple Bible-focused chat application using OpenAI's LLM with built-in NKJV knowledge"
authors = [
    {name = "Bible Chat", email = "user@example.com"}
]
dependencies = [
    "streamlit>=1.29.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "curl-cffi>=0.5.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "boto3>=1.28.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
bible-chat = "src.bible_chat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
]
